@@ -18,16 +18,21 @@
  */
 package org.apache.pinot.segment.local.recordtransformer;
 
+import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.Set;
 import javax.annotation.Nullable;
 import org.apache.pinot.segment.local.utils.IngestionUtils;
 import org.apache.pinot.spi.config.table.TableConfig;
+import org.apache.pinot.spi.config.table.ingestion.EnrichmentConfig;
+import org.apache.pinot.spi.config.table.ingestion.IngestionConfig;
 import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.data.readers.GenericRow;
+import org.apache.pinot.spi.recordtransformer.RecordTransformer;
+import org.apache.pinot.spi.recordtransformer.enricher.RecordEnricher;
+import org.apache.pinot.spi.recordtransformer.enricher.RecordEnricherRegistry;
 
 
 /**
@@ -42,8 +47,11 @@ public class CompositeTransformer implements RecordTransformer {
    * <p>NOTE: DO NOT CHANGE THE ORDER OF THE RECORD TRANSFORMERS
    * <ul>
    *   <li>
-   *     Optional {@link ExpressionTransformer} before everyone else, so that we get the real columns for other
-   *     transformers to work on
+   *     Optional list of {@link RecordEnricher}s to enrich the record before any other transformation.
+   *   </li>
+   *   <li>
+   *     Optional {@link ExpressionTransformer} after enrichers, so that we get the real columns for other transformers
+   *     to work on
    *   </li>
    *   <li>
    *     Optional {@link FilterTransformer} after {@link ExpressionTransformer}, so that we have source as well as
@@ -82,12 +90,37 @@ public class CompositeTransformer implements RecordTransformer {
    * </ul>
    */
   public static List<RecordTransformer> getDefaultTransformers(TableConfig tableConfig, Schema schema) {
-    return Stream.of(new ExpressionTransformer(tableConfig, schema), new FilterTransformer(tableConfig),
-            new SchemaConformingTransformer(tableConfig, schema),
-            new SchemaConformingTransformerV2(tableConfig, schema), new DataTypeTransformer(tableConfig, schema),
-            new TimeValidationTransformer(tableConfig, schema), new SpecialValueTransformer(schema),
-            new NullValueTransformer(tableConfig, schema), new SanitizationTransformer(schema)).filter(t -> !t.isNoOp())
-        .collect(Collectors.toList());
+    List<RecordTransformer> transformers = new ArrayList<>();
+    IngestionConfig ingestionConfig = tableConfig.getIngestionConfig();
+    if (ingestionConfig != null) {
+      List<EnrichmentConfig> enrichmentConfigs = ingestionConfig.getEnrichmentConfigs();
+      if (enrichmentConfigs != null) {
+        for (EnrichmentConfig enrichmentConfig : enrichmentConfigs) {
+          try {
+            addIfNotNoOp(transformers, RecordEnricherRegistry.createRecordEnricher(enrichmentConfig));
+          } catch (IOException e) {
+            throw new RuntimeException("Failed to instantiate record enricher " + enrichmentConfig.getEnricherType(),
+                e);
+          }
+        }
+      }
+    }
+    addIfNotNoOp(transformers, new ExpressionTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new FilterTransformer(tableConfig));
+    addIfNotNoOp(transformers, new SchemaConformingTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new SchemaConformingTransformerV2(tableConfig, schema));
+    addIfNotNoOp(transformers, new DataTypeTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new TimeValidationTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new SpecialValueTransformer(schema));
+    addIfNotNoOp(transformers, new NullValueTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new SanitizationTransformer(schema));
+    return transformers;
+  }
+
+  private static void addIfNotNoOp(List<RecordTransformer> transformers, RecordTransformer transformer) {
+    if (!transformer.isNoOp()) {
+      transformers.add(transformer);
+    }
   }
 
   public static CompositeTransformer getDefaultTransformer(TableConfig tableConfig, Schema schema) {
@@ -96,10 +129,6 @@ public class CompositeTransformer implements RecordTransformer {
 
   /**
    * Includes custom and default transformers.
-   * @param customTransformers
-   * @param tableConfig
-   * @param schema
-   * @return
    */
   public static CompositeTransformer composeAllTransformers(List<RecordTransformer> customTransformers,
       TableConfig tableConfig, Schema schema) {
@@ -112,11 +141,20 @@ public class CompositeTransformer implements RecordTransformer {
    * Returns a pass through record transformer that does not transform the record.
    */
   public static CompositeTransformer getPassThroughTransformer() {
-    return new CompositeTransformer(Collections.emptyList());
+    return new CompositeTransformer(List.of());
   }
 
   public CompositeTransformer(List<RecordTransformer> transformers) {
     _transformers = transformers;
+  }
+
+  @Override
+  public Set<String> getInputColumns() {
+    Set<String> inputColumns = new HashSet<>();
+    for (RecordTransformer transformer : _transformers) {
+      inputColumns.addAll(transformer.getInputColumns());
+    }
+    return inputColumns;
   }
 
   @Nullable
